syntax = "proto3";

service DiztlService {
    rpc Search (SearchRequest) returns (SearchResponse) {
    }
    rpc Upload (DownloadRequest) returns (stream FileChunk) {
    }
}

service TrackerService {
    rpc Register (Node) returns (Node) {
    }
    rpc Search (SearchRequest) returns (stream SearchResponse) {
    }
}

message Node {
    string ip = 1;
    int32 id = 2;
}

message FileMetadata {
    string path = 1;
    int32 id = 2;
    int64 size = 3;
    int32 chunks = 4;
}

message FileChunk {
    FileMetadata metadata = 1;
    bytes data = 2;
    int32 chunk = 3;
}

message SearchRequest {
    string filename = 1;
    Node source = 2;
}

message SearchResponse {
    int32 count = 1;
    repeated FileMetadata files = 2;
    Node node = 3;
}

message DownloadRequest {
    Node source = 1;
    FileMetadata metadata = 2;
}
